--- a/public/sass/wp-plugin-rating.sass
+++ b/public/sass/wp-plugin-rating.sass
@@ -1,12 +1,12 @@
 /**
- * Eliasis module for WordPress plugins · WP Plugin Rating
+ * WP Plugin Rating · Eliasis module for WordPress plugins
  * 
  * @author     Josantonius - hello@josantonius.com
  * @copyright  Copyright (c) 2017
  * @license    GPL-2.0+
  * @link       https://github.com/Josantonius/WP_Plugin-Rating.git
  * @since      1.0.0
- */    
+ */  
 #jst-stars
   right: 0
   margin-right: 50px
