--- a/public/css/wp-plugin-rating.css
+++ b/public/css/wp-plugin-rating.css
@@ -1,5 +1,5 @@
 /**
- * Eliasis module for WordPress plugins · WP Plugin Rating
+ * WP Plugin Rating · Eliasis module for WordPress plugins
  * 
  * @author     Josantonius - hello@josantonius.com
  * @copyright  Copyright (c) 2017
